Fix issue with poem sort going out of container

--- a/karutasrs-front/app/styles/components/filtered-poem-grid.less
+++ b/karutasrs-front/app/styles/components/filtered-poem-grid.less
@@ -22,6 +22,10 @@
 	margin-right: 0.5rem;
 }
 
+.poem-filters > .poem-filter-types > .ui.input {
+	width: 120px;
+}
+
 @media screen and (max-width: @computerBreakpoint - 1) {
 	.poem-filters,
 	.poem-filter-types,
